[package]
name = "project_solution_for_work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers"] }
bcrypt = "0.15.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "8.2.0"
sea-orm = { version = "0.12.2", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "3.3.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.0", features = ["derive"] }
